--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 ---
 layout: home
-title: Home
+title: bankole.org
 ---
+<div class="blurb">
+	<h1>Hi there!</h1>
+	<p>Not even doing this right now</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
