--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: home
 title: bankole.org
 ---
 <div class="blurb">
-	<h1>Hi there!</h1>
-	<p>Not even doing this right now</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        <h1>Hi there!</h1>
+        <p><em>Not even doing this right now</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
